--- a/src/views/servicios.ejs
+++ b/src/views/servicios.ejs
@@ -124,7 +124,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
               <a class="nav-link" href="/">Inicio</a>
-              <a class="nav-link" href="servicios">Servicios</a>
+              <a class="nav-link" href="servicios">Serviios</a>
               <a class="nav-link" href="contacto">Contacto</a>
               <a class="nav-link" href="asistente">Asistente</a>
             </div>
