--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -22,7 +22,7 @@
 
         .hero {
             position: relative;
-            background-image: url('/img/fondo\ principal.jpg'); /* Placeholder for background image */
+            background-image: url('/img/fondo principal.jpg'); /* Placeholder for background image */
             background-size: cover;
             background-position: center;
             height: 100vh;
